<resources>
    <string name="app_name" translatable="false">narsoe</string>
    <string name="title_search">Search</string>
    <string name="title_recent_calls">Recent calls</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="seacth_input_hint">Phone Number</string>
    <string name="button_search_label">Search</string>
    <string name="setting_switch_define_incoming_call">Define incoming call</string>
    <string name="setting_switch_show_modal_window">Close modal window when call apply</string>
    <string name="setting_plain_text_hint">ADD_SOME_DOMAIN_INFO</string>
    <string name="info_caller_phone">Phone number</string>
    <string name="info_block_info_header">Some information</string>
    <string name="bad_request">Oooh… Something went wrong</string>
    <string name="number_info_activity_general">General</string>
    <string name="call_info_number_example" translatable="false">555–555–555</string>
    <string name="call_info_info_example">Name SomeName \nRating SomeNumber \nType SomeType</string>
    <string name="setting_modal_window_position">Modal window position</string>
    <string name="setting_activity_block_spam_calls">Block spam calls</string>
    <string name="setting_activity_language_setting">Language</string>
    <string name="setting_activity_input_bottom_rating_border">Input bottom rating border</string>
    <string name="setting_activity_domain_info_header">Domain URL</string>
    <string name="setting_activity_server_version">Server version</string>
    <string name="setting_activity_server_version_request_error">SERVER IS NOT AVAILABLE</string>
    <string name="recentCallsActivityNumberCopied">Number copied</string>
    <string name="recentCallsActivitySearchQuery">Search query</string>
    <string name="recentCalls_activity_unknown_caller">Unknown</string>
    <string name="responseHandler_company_name">Company name</string>
    <string name="responseHandler_company_description">Company desc</string>
    <string name="responseHandler_company_city">Company city</string>
    <string name="responseHandler_company_url">Company URL</string>
    <string name="responseHandler_company_telephone">Company Telephone</string>
    <string name="responseHandler_company_adress">Company address</string>
    <string name="responseHandler_company_email">Company email</string>
    <string name="responseHandler_name">Name</string>
    <string name="responseHandler_rating">Rating</string>
    <string name="responseHandler_region">Region</string>
    <string name="responseHandler_avito_name">Avito name</string>
    <string name="responseHandler_avito_adress">Avito address</string>
    <string name="responseHandler_type">Type</string>
    <string name="responseHandler_comment">Comment</string>
    <string name="number_info_activity_general_info_description">Briefly share with you information</string>
    <string name="number_info_activity_extra">Extra</string>
    <string name="number_info_activity_comments">Comments</string>
    <string name="number_info_activity_extra_info_description">From different sources</string>
    <string name="number_info_activity_comments_info_description">Somebody once told me...</string>
    <string name="title_about">About</string>
    <string name="about_version_title">Version</string>
    <string name="about_GIT">GIT URL</string>
    <string name="about_close_button">Close</string>
    <string name="about_GIT_URL" translatable="false">https://github.com/GrigoryKrasnochub</string>
</resources>
